less/mobiletv/containers.less
@import "../../../pstj/less/translation";
@import "../../../pstj/less/button";
@import "../../../pstj/less/transitions";
@import "colors";

@panelsize: 50px;

body {
  background-color: @base;
	color: @textcolor;
}

/** The main container, we just need it to be as big as the screen */
.container {
  width: 100%;
  height: 100%;
  background-color: @base;
}

/** This is the top panel with the controlling icons */
.panel, .search-panel {
  width: 100%;
  height: @panelsize;
  position: fixed;
  top: 0;
  left: 0;
  overflow-y: hidden;
}

.panel {
	z-index: 1000;
	background-color: @panel;
}

.panel.drawed {
  .transition(height 200ms);
  height: (@panelsize * 2);
}

.search-panel {
  background-color: @panel;
  box-shadow: 0 0 8px @panel;
	z-index: 1100;
  height: @panelsize*8;
	.translation(0, -@panelsize*8);
	.transitiontranslate(500ms);
	&.active {
		.translation(0, 0);
	}
}

.drawer.icons {
  background-color: darken(@base, 5%);
}

.confirm-panel {
  .notice {
    font-size: 30px;
  }
}

// The main container (holds only left hand list).
.up {
  width: 100%;
  min-height: 100%;
}


// By default we assume browser: left and right should be 50%, right
// displayced 50% to the right
.left, .right {
  width: 50%;
  background-color: @base;
}

.left {
	min-height: 100%;
  padding-top: 50px;
}

.right {
  position: fixed;
  left: 50%;
  top: 0;
  background-color: @base;
  padding: @panelsize 10px 0 10px;
  border-left: 1px solid @shadow;
  height: 100%;
  width: 50%;
}

.backbutton {
  .pstj-button(@panel);
  line-height: 20px;
  font-size: 20px;
  /* @alternate */
  display: none;
}
.backbutton-hover {
  .pstj-button-hover(lighten(@panel, 10%));
}

.backbutton-active {
  .pstj-button-active();
}

// Smartphones (landscape and portrait)
// Ipad - portrait
@media only screen
and (min-device-width : 320px)
and (max-device-width : 480px),
only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : portrait)
{
  // both right and up must be 100%
  .right {
    width: 100%;
    left: 0;
    .translation(100%);
    .transitiontranslate(300ms);
  }
  .right-active {
    .translation(0);
  }
  .left {
    width: 100%;
  }
  .backbutton {
    display: none;
  }
}

html.android {
  .right {
    display: none;
  }
  .left {
    width: 100%;
  }
}

